--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
                     Amount each person need to pay
                 </h3>
                 <h2 id="totalAmountPayableByOne" class="totalAmountPayableByOne">
-                    20.50
+                    0
                 </h2>
                 <h4 id="divisionSplitup" class="divisionSplitup">
-                    <span id="splitupActualAmount">18.50</span> + <span id="splitupTip">2.00</span> tip
+                    (which is <span id="splitupActualAmount">0</span> + <span id="splitupTip">0</span> tip)
                 </h4>
             </div>
         </div>
