--- a/index.html
+++ b/index.html
@@ -1,1 +1,60 @@
-github page test
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <meta name="apple-mobile-web-app-capable" content="yes" />
+        <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+        <title>
+        </title>
+        <link rel="stylesheet" href="css/jquery.mobile-1.2.0.min.css" />
+        <link rel="stylesheet" href="css/calc.css" />
+        <script src="js/jquery.min.js"></script>
+        <script src="js/jquery.mobile-1.2.0.min.js"></script>
+        <script src="js/calc.js"></script>
+    </head>
+    
+    <body>
+        <!-- Home -->
+        <div data-role="page" id="page1">
+            <div data-theme="a" data-role="header">
+                <h3>
+                    Tip Calculator
+                </h3>
+            </div>
+            <div data-role="content"  data-content-theme="b">
+                    
+                    <fieldset data-role="controlgroup" class="numPeopleContainer">
+                        <label for="numPeople">
+                            No. of people
+                        </label>
+                        <input name="numPeople" id="numPeople" placeholder="" value="1" type="number" />
+                    </fieldset>
+
+                    <fieldset data-role="controlgroup" class="totalAmountContainer">
+                        <label for="totalAmount">
+                            Total Amount
+                        </label>
+                        <input name="totalAmount" id="totalAmount" placeholder="" value="" type="number" />
+                    </fieldset>
+
+                    <fieldset data-role="controlgroup">
+                        <label for="tipPercentage">
+                            Tip Percentage
+                        </label>
+                        <input id="tipPercentage" name="slider" value="15" min="0" max="100" data-highlight="false" type="range" />
+                    </fieldset>
+
+                <h3>
+                    Amount each person need to pay
+                </h3>
+                <h2 id="totalAmountPayableByOne" class="totalAmountPayableByOne">
+                    0
+                </h2>
+                <h4 id="divisionSplitup" class="divisionSplitup">
+                    (which is <span id="splitupActualAmount">0</span> + <span id="splitupTip">0</span> tip)
+                </h4>
+            </div>
+        </div>
+    </body>
+</html>
