--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta name="apple-mobile-web-app-capable" content="yes" />
         <meta name="apple-mobile-web-app-status-bar-style" content="black" />
-        <title>
-        </title>
+        <title>Tip Calculator App</title>
         <link rel="stylesheet" href="css/jquery.mobile-1.2.0.min.css" />
         <link rel="stylesheet" href="css/calc.css" />
         <script src="js/jquery.min.js"></script>
